--- a/templates/docker.html
+++ b/templates/docker.html
@@ -5,41 +5,39 @@
 {% endblock %}
 
 {% block content %}
-<h2>{{ context.container.name }}</h2>
-<ul class="list-group mt-3">
-  <li class="list-group-item">
-    <div class="row">
-      <div class="col-2 text-center">
-        <i class="fas fa-hashtag"></i>
+<tr>
+<table class="table table-hover table-dark">
+  <thead>
+    
+      <th scope="col">ID</th>
+      <th scope="col">Imagem</th>
+      <th scope="col">Status</th>
+      <th scope="col">Ações</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for c in context.containers %}
+    <tr>
+    <th scope="row">{{c.short_id}}</th>
+    <td>{{ c.image.tags[0] }}</td>
+    <td> {{ c.status }} </td>
+    <td>
+      <div class="row">
+        <div class ="col-6">
+          <a href="/docker/start/{{c.short_id}}">
+            <i class="fas fa-smile-beam"></i>
+          </a>
+        </div>
+        <div class ="col-6" >
+          <a href="/docker/stop/{{c.short_id}}">
+            <i class="fas fa-skull-crossbones" style="color:red;"></i>
+          </a>
+        </div>
       </div>
-      <div class="col-10">
-        {{ context.container.short_id }}
-      </div>
-    </div>
-  </li>
-  <li class="list-group-item">
-    <div class="row">
-      <div class="col-2 text-center">
-        <i class="fas fa-film"></i>
-      </div>
-      <div class="col-10">
-        {{ context.container.image.tags[0] }}
-      </div>
-    </div>
-  </li>
-  <li class="list-group-item">
-    <div class="row">
-      <div class="col-2 text-center">
-        <i class="fas fa-chart-bar"></i>
-      </div>
-      <div class="col-10">
-        {{ context.container.status }}
-      </div>
-    </div>    
-  </li>
-</ul>
-<div class="float-right mt-3">
-  <a class="btn btn-secondary mr-2" href="/docker/stop" title="Parar Container">Parar</a>
-  <a class="btn btn-primary" href="/docker/start" title="Iniciar Container">Iniciar</a>
-</div>
+    </td>
+    </tr>
+  
+    {% endfor %}
+  </tbody>
+</table>
 {% endblock %}
