--- a/templates/gitlab.html
+++ b/templates/gitlab.html
@@ -35,12 +35,14 @@
       </tr>
     </thead>
     <tbody>
+      {% for p in context.projects %}
       <tr>
-        <td>== Email do Usuário ==</td>
-        <td>== Nome do Usuário ==</td>
-        <td>== Status do Usuário ==</td>
-        <td>== Usuário é Admin ==</td>
+        <td>{{ p.name }}</td>
+        <td>{{ p.id }}</td>
+        <td>{{ p.name }}</td>
+        <td>{{ p.name }}/td>
       </tr>
+      {% endfor %}
     </tbody>
   </table>
 </section>
@@ -52,17 +54,19 @@
     <thead class="thead-dark">
       <tr>
         <th scope="col">Nome do Projeto</th>
-        <th scope="col">Link SSH</th>
+        <th scope="col">Id</th>
         <th scope="col">Dono</th>
-        <th scope="col">Caminho</th>      
+        <th scope="col">Commits</th>      
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>== Nome do Projeto ==</td>
-        <td>== SSH do Usuário ==</td>
-        <td>== Username do Dono do Projeto ==</td>
-        <td>== Caminho do Projeto ==</td>      
+          {% for p in context.projects %}
+        <td>{{ p.name }}</td>
+        <td>{{ p.id }}</td>
+        <td>{{ p.owner.name }}</td>
+        <td>{{ p.commit }}</td>   
+          {% endfor %}   
       </tr>
     </tbody>
   </table>
