--- a/templates/gitlab.html
+++ b/templates/gitlab.html
@@ -1,46 +1,29 @@
 {% extends 'index.html' %}
 
 {% block header %}
-<div class="row">
-  <div class="col-1">
-    <strong class="navbar-brand">Gitlab</strong>
-  </div>
-  <div class="col-8">
-    <nav>
-      <ul class="nav nav-pills">
-        <li class="nav-item">
-          <a class="nav-link {{ 'active' if context.current_tab == 'users' else '' }}" href="/gitlab?current_tab=users" title="Ver usuários">Usuários</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link {{ 'active' if context.current_tab == 'projects' else '' }}" href="/gitlab?current_tab=projects" title="Ver projetos">Projetos</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</div>
+    <strong>Gitlab</strong>
 {% endblock %}
 
 {% block content %}
 <section id="users" class="{{ 'hidden' if context.current_tab == 'projects' else '' }}">
   <header class="mb-3">
-    <h2>Usuários</h2>
+    <h2>Commits</h2>
   </header>
   <table class="table table-hover table-striped">
     <thead class="thead-dark">
+      
       <tr>
-        <th scope="col">Email</th>
-        <th scope="col">Usuário</th>
-        <th scope="col">Status</th>
-        <th scope="col">Admin</th>
+        <th scope="col">Autor</th>
+        <th scope="col">Mensagem</th>
+        <th scope="col">Data</th>
       </tr>
     </thead>
     <tbody>
-      {% for p in context.projects %}
+        {% for c in context.commits %}
       <tr>
-        <td>{{ p.name }}</td>
-        <td>{{ p.id }}</td>
-        <td>{{ p.name }}</td>
-        <td>{{ p.name }}/td>
+        <td>{{ c.author_name }}</td>
+        <td>{{ c.message }}</td>
+        <td>{{ c.authored_date }}</td>
       </tr>
       {% endfor %}
     </tbody>
@@ -65,7 +48,11 @@
         <td>{{ p.name }}</td>
         <td>{{ p.id }}</td>
         <td>{{ p.owner.name }}</td>
-        <td>{{ p.commit }}</td>   
+        <td>
+                  <a href="/gitlab/{{ p.id }}/commits">
+                  <i class="fas fa-book-open"></i>
+                </a>
+              </td>   
           {% endfor %}   
       </tr>
     </tbody>
